--- a/config/west.yml
+++ b/config/west.yml
@@ -1,16 +1,11 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: urob
-      url-base: https://github.com/urob
+      url-base: https://github.com/petejohanson/
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: feat/pointers-move-scroll
       import: app/west.yml
-    - name: zmk-helpers
-      remote: urob
-      revision: main
   self:
     path: config
